still trying to fix the issue with the scroll overflows - lets see if z-index works

--- a/public/stylesheets/jquery.mobile.splitview.css
+++ b/public/stylesheets/jquery.mobile.splitview.css
@@ -25,10 +25,6 @@ body {
   z-index: 100;
 }
 
-html.touch div.ui-overflow-hidden, div.ui-overflow-hidden {
-  overflow:hidden;
-}
-
 .splitview .ui-splitview-hidden {
   display:none;
 }
@@ -47,6 +43,7 @@ html.touch div.ui-overflow-hidden, div.ui-overflow-hidden {
   bottom:auto; 
   left:0;
   right:0;
+  z-index: 1000;
 }
 
 .splitview.min-width-480px .ui-footer {
@@ -55,6 +52,7 @@ html.touch div.ui-overflow-hidden, div.ui-overflow-hidden {
   bottom:0;
   left:0;
   right:0;
+  z-index:1000;
 }
 
 .splitview.min-width-480px .ui-content {
@@ -63,10 +61,8 @@ html.touch div.ui-overflow-hidden, div.ui-overflow-hidden {
   bottom:0;
   left:0;
   right:0;
-}
-
-.splitview .ui-content {
   overflow:auto;
+  z-index:1;
 }
 
 /************************************************************************************************************
